--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
   global:
     - DB_URL="postgres:///auction"
     - TEST_DB_URL="postgres:///auction"
+    - GOOGLE_OAUTH_ID=""
+    - GOOGLE_OAUTH_SECRET=""
     - PYTHONPATH=.
 
 install:
@@ -26,8 +28,6 @@ before_script:
   - auction create_all
 
 script:
-  - export GOOGLE_OAUTH_ID=$GOOGLE_OAUTH_ID
-  - export GOOGLE_OAUTH_SECRET=$GOOGLE_OAUTH_SECRET
   - py.test -v tests --cov auction --cov-report term-missing
 
 after_success:
